--- a/core/style/variable.less
+++ b/core/style/variable.less
@@ -1,10 +1,13 @@
 // primary style
-@primaryColor: #006cbe;
-@primaryHoverColor: #0078d4;
-@primaryActiveColor: #005ca3;
-@primaryLightColor: #4ea1e1;
-@primaryLightHoverColor: #68afe5;
-@primaryLightActiveColor: #3d98de;
+@primaryColor: #3d92f6;
+@primaryHoverColor: #51a2ff;
+@primaryActiveColor: #2784ee;
+@primaryLightColor: #72b1f8;
+@primaryLightHoverColor: #84baf8;
+@primaryLightActiveColor: #5f9fe7;
+
+// std
+@stdRadius: 4px;
 
 // helper
 @dimColor: rgba(0, 0, 0, 0.3);
@@ -14,58 +17,27 @@
 @warningColor: #ccb805;
 
 // control
-@controlBgNormalColor: #454545;
-@controlBgHoverColor: #4d4d4d;
-@controlBgActiveColor: #424242;
-@controlBgDarkColor: #2b2b2b;
-@controlBgLightColor: #b8b8b8;
-@controlHeight: 22px;
+@controlBgNormalColor: #2d3035;
+@controlBgHoverColor: #34373c;
+@controlBgActiveColor: #3f4247;
+@controlBgDarkColor: #22252a;
+@controlBgLightColor: #4d5053;
+@controlHeight: 36px;
 
 // border
 @borderNormalColor: #737373;
 @borderHoverColor: #9a9a9a;
 @borderActiveColor: #5c5c5c;
 
+// split
+@splitColor: #33363b;
+
 // text
-@textColor: #cccccc;
-@subTextColor: #bbbbbb;
+@textColor: #dadfe7;
+@subTextColor: #86898e;
+@disbledColor: #56595e;
 
 // panel and pop item
-@panelBackground: #3b3b3b;
+@panelBackground: #2d3035;
 @panelShadow: 0px 1.6px 3.6px #00000041, 0px 0px 2.9px #00000037;
 @popItemShadow: 0px 12.8px 28.8px #00000041, 0px 0px 9.2px #00000037;
-
-/*********/
-/** Node */
-/*********/
-
-// view
-@viewBgColor: #1d1d1d;
-@gridColor: @viewBgColor + #111;
-@gridBorderColor: @viewBgColor + #444;
-@gridSpacing: 30px;
-
-// node
-@nodeTitleHeight: 28px;
-@nodeFontSize: 0.7rem;
-@nodeTitleFontSize: 0.9rem;
-@nodeTitle: #3f3f3f;
-@nodeBackground: #272727;
-@nodeShadow: #00000080;
-@nodeMinWidth: 110px;
-@indicateColor: #3f3f3f;
-@nodeHoverBorder: 2px solid @borderHoverColor;
-@nodeSelectedBorder: 2px solid @primaryColor;
-
-// port
-@portSize: 12px;
-@disport: red;
-@intPort: @primaryColor;
-@floatPort: #ec8ef8;
-@doublePort: #70f68d;
-@stringPort: #ebf879;
-@boolPort: #ff7a7a;
-@execPort: white;
-
-//connection
-@connLineWidth: 2px;
