--- a/core/component/css/component.default.less
+++ b/core/component/css/component.default.less
@@ -381,12 +381,6 @@ input[type='range']::-webkit-slider-thumb:hover {
 /**   List  */
 /************/
 
-.mono-list {
-    display: block;
-    overflow: auto;
-    padding: 0 10px;
-}
-
 .mono-list-subtitle {
     font-size: 1.5rem;
     font-weight: bold;
@@ -398,6 +392,9 @@ input[type='range']::-webkit-slider-thumb:hover {
 }
 
 .mono-list-widget {
+    overflow: auto;
+    padding: 0 10px;
+
     li,
     .mono-list-item {
         cursor: pointer;
@@ -431,6 +428,7 @@ input[type='range']::-webkit-slider-thumb:hover {
 
 .mono-list-view {
     padding: 0;
+    position: relative;
 
     li,
     .mono-list-item {
@@ -452,11 +450,6 @@ input[type='range']::-webkit-slider-thumb:hover {
         background-color: @controlBgActiveColor;
     }
 
-    .mono-list-item-selected {
-        position: relative;
-        background-color: @controlBgNormalColor !important;
-    }
-
     // .mono-list-item-selected::after {
     //     content: '';
     //     width: 3px;
@@ -469,6 +462,11 @@ input[type='range']::-webkit-slider-thumb:hover {
     //     border-radius: 2px;
     //     background: @primaryLightColor;
     // }
+}
+
+.mono-list-item-selected {
+    color: @textColor;
+    background-color: @controlBgActiveColor !important;
 }
 
 .mono-list-item-delegate {
